<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <ImageView  android:id="@+id/imageLogo"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/nucor_tp_logo_2"
            />

        <TextView android:id="@+id/tvLogin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:layout_below="@id/imageLogo"
            android:fontFamily="@font/bold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#393C37"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="445dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />

        <EditText android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#393C37"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/regular"
            android:hint="@string/userName"
            android:text=""
            android:inputType="text"
            android:textColor="#393C37"
            android:textColorHint="#393C37"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="246dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/baseline_person_24" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="05dp"
            android:backgroundTint="#393C37"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="#393C37"
            android:textColorHint="#393C37"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="316dp"
            android:drawableLeft="@drawable/baseline_key_24" />

        <CheckBox android:id="@+id/chShowHidePassword"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/Password"
            android:layout_below="@id/Password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="40dp"
            android:text="@string/showPassword"
            android:textColor="#393C37"

            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="173dp" />
        <!-->android:theme="@style/MyCheckbox"<-->

        <Button
            android:id="@+id/btnSignIn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/chShowHidePassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="23dp"
            android:background="@color/colorSecondary"
            android:fontFamily="@font/regular"
            android:onClick="SignIN"
            android:text="@string/signIn"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="381dp" />

        <ProgressBar android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="62dp"
            android:layout_height="55dp"
            android:layout_below="@+id/chShowHidePassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="169dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="170dp"
            android:background="@drawable/rounded_corners"
            android:elevation="10dp"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="169dp"
            android:layout_marginRight="170dp" />

        <TextView android:id="@+id/tvVersion"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/regular"
            android:textAlignment="textEnd"
            android:text="Version"
            android:textColor="#393C37"
            android:textColorHint="#393C37"
            tools:ignore="MissingConstraints,RtlCompat"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="381dp" />

    </RelativeLayout>

</LinearLayout>